[metadata]
name = Mopidy-RadioNet
version = 0.2.2
url = https://github.com/plintx/mopidy-radionet
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy extension for playing music from Radio.net
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Mopidy >= 3.0.0
    Pykka >= 2.0.1
    pyspotify >= 2.0.5
    requests >= 2.20.0
    setuptools


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-import-order
    isort
test =
    pytest
    pytest-cov
    responses
dev =
    %(lint)s
    %(test)s

[flake8]
application-import-names = mopidy_radionet,tests
exclude = .git,.tox
